Tag Release v 0.1.3 - Update to latest package format from the portal - Add topics, platformRoles, workRoles, eventRoles, publisher keys to the package yml - Update wordlist

--- a/pycep/data/mappings.yml
+++ b/pycep/data/mappings.yml
@@ -3581,7 +3581,7 @@ T0947:
 T0013:
   mappingTagType: "task" 
   mappingTagDescription: 
-    "Apply coding and testing standards, apply security testing tools including "'fuzzing" static-analysis code scanning tools, and conduct code reviews." 
+    "Apply coding and testing standards, apply security testing tools including \"fuzzing\" static-analysis code scanning tools, and conduct code reviews."
 T0156:
   mappingTagType: "task" 
   mappingTagDescription: 
